<resources>
    <string name="app_name">DataBaseExample</string>
    <string name="action_save">Сохранить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_insert">Вставить</string>
    <string name="gender_unknown">Неизвестно</string>
    <string name="gender_male">Кот</string>
    <string name="gender_female">Кошка</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="info">Общая информация</string>
    <string name="name">Имя</string>
    <string name="city">Город</string>
    <string name="add">Добавить запись</string>
    <string name="db_content">Таблица содержит %d гостей</string>
    <string name="item_gender">Пол: %s</string>
    <string name="item_age">Возраст: %s</string>
    <string name="item_name">Имя: %s</string>
    <string name="item_city">Город: %s</string>
    <string name="message_confused1">Эмм…</string>
    <string name="message_confused2">Как ты сюда попал?</string>
    <string name="message_record_has_not_been_removed">Запись не удалена</string>
    <string name="message_record_has_been_removed">Запись удалена</string>
    <string name="message_record_has_not_been_added">Запись не добавлена</string>
    <string name="message_record_has_been_added_with_Id">Добавлена запись с номером %d</string>
    <string name="message_record_has_been_updated">Запись обновлена</string>
    <string name="message_record_has_not_been_updated">Запись не обновлена</string>
    <string-array name="array_gender_options">
        <item>@string/gender_female</item>
        <item>@string/gender_male</item>
        <item>@string/gender_unknown</item>
    </string-array>
</resources>