<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EditorActivity"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/edit_guest_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edit_guest_city"
                style="@style/EditorFieldStyle"
                android:hint="@string/city"
                android:inputType="textCapWords"
                android:importantForAutofill="no" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/gender" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/age" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="4dp"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/edit_guest_age"
                style="@style/EditorFieldStyle"
                android:hint="@string/age"
                android:inputType="number"
                android:importantForAutofill="no" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>